examples/single-cluster-single-mesh/config/kuadrant/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio: ingressgateway
  name: kuadrant-ingressgateway
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    hostname: "demo.10.89.0.0.nip.io"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: gateway-tls-secret
          kind: Secret
    allowedRoutes:
      namespaces:
        from: All
